--- a/description
+++ b/description
@@ -6,3 +6,8 @@ graduated from s v university
 my village is irrivandla palli village
 k.v palli mandal
 ap-517213
+
+
+i joined in vector india
+for taking training in embedded sysytems
+after 5 months i should place in company
